--- a/www/game.css
+++ b/www/game.css
@@ -1,12 +1,27 @@
 div {
-    height: 400px;
+    
 }
 
 main {
-    width: 50vw;
     margin-top: 30px;
 }
+
+input[type=button] {
+    background-color: rgba(17, 1, 165, 0);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+form {
+    align-items: center;
+    justify-content: space-around;
+}
 .menu {
+    height: 100px;
     border: solid 2px #424542;
     box-shadow: 1px 1px #e7dfe7,
                 -1px -1px #e7dfe7,
@@ -37,15 +52,38 @@ main {
 }
 
 .container-perso {
+    height: 230px;
     align-items: flex-end;
     justify-content: space-between;
+    background-image: url("assets/sprites/LafBWtl.gif");
+    background-repeat: no-repeat;
 }
 
 .perso1 {
-    height: 160px;
+    height: 86px;
+    width: 100px;
+    background-image: url("assets/sprites/unit_idle_207000105.png");
+    /*animation : walkRight 1s steps(3) infinite;*/
 }
 
-.perso2 {
-    height:  160px;
+@keyframes walkRight {
+    from {
+        background-position-y: 0;
+        background-position-x: 0;
+    }
+    to {
+        background-position-y: 0;
+        background-position-x: -177px;
+    }
 }
+
+
+.perso2 {
+    display: block;
+    height: 86px;
+    width: 150px;
+    background-image: url("assets/sprites/unit_idle_207001005.png");
+}
+
+
 
