--- a/www/game.css
+++ b/www/game.css
@@ -6,12 +6,19 @@ ul {
     list-style-type: none;
 }
 
+section {
+    align-items: center;
+}
 main {
     width: 290px;
     margin-top: 30px;
 
 }
 
+#gameover {
+    position: inherit;
+    display: none;
+}
 .skill-list {
     display: flex;
     display: none;
@@ -37,7 +44,6 @@ form {
     justify-content: center;
 }
 .menu {
-    height: 100px;
     border: solid 2px #424542;
     box-shadow: 1px 1px #e7dfe7,
                 -1px -1px #e7dfe7,
@@ -67,12 +73,29 @@ form {
     flex-direction: row;
 }
 
-.container-perso {
+.container-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.container-game {
+    width: 80%;
     height: 230px;
-    align-items: flex-end;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-between;
     background-image: url("assets/sprites/LafBWtl.gif");
     background-repeat: no-repeat;
+    align-items: center;
+}
+.container-perso {
+    justify-content: space-around;
+    width: 80%;
+    align-self: flex-end;
+}
+.container-barres {
+    width: 80%;
+    justify-content: space-between;
+    margin-top: 10px;
 }
 
 .perso1 {
@@ -115,26 +138,54 @@ form {
     }
 }
 
-.barpv1 {
-    background-color: #b630a077;
+.barcontainer1 {
+    height: 25px;
+    width: 200px;
+    background-color: #0e000b2c;
     border: #f3f3f3 1px solid;
     border-radius: 10px;
+}
+
+.barpv1 {
+    background-color: #b630a077;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+}
+.barpv1text {
+    color: #e7dfe7;
+    margin-left: 50px;
+}
+.barpv2text {
+    color: #e7dfe7;
+    margin-right: 50px;
+}
+
+.barcontainer2 {
     height: 25px;
-    width: 150px;
-    position: absolute;
-    top: 30px;
-    left: 15px;
+    width: 200px;
+    overflow: hidden;
+    background-color: #0e000b2c;
+    border: #f3f3f3 1px solid;
+    border-radius: 10px;
 }
 
 .barpv2 {
-
     background-color: #b630a077;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+   
+}
+
+.barcp1 {
+    background-color: #35b63086;
     border: #f3f3f3 1px solid;
     border-radius: 10px;
     height: 25px;
-    width: 150px;
+    width: 75px;
     position: absolute;
     top: 30px;
-    overflow: hidden;
-    left: 80%;
+    left: 15px;
+
 }
