--- a/www/game.css
+++ b/www/game.css
@@ -18,7 +18,7 @@ section {
     align-items: center;
 }
 main {
-    width: 290px;
+    max-width: 70%;
     margin-top: 30px;
 
 }
@@ -40,14 +40,15 @@ input[type=button] {
     background-color: rgba(17, 1, 165, 0);
     border: none;
     color: white;
-    padding: 16px 32px;
+    padding: 16px 10px;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
 }
 
 form {
-    width: 250px;
+    width: 30%;
+    align-items: center;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -257,31 +258,55 @@ form {
 }
 
 .barcontainer1 {
-    height: 25px;
+    height: 15px;
     width: 200px;
     background-color: #0e000b2c;
     border: #f3f3f3 1px solid;
     border-radius: 10px;
 }
 
-.barpv1 {
+#barpv1 {
     background-color: #b630a077;
     border-radius: 10px;
     width: 100%;
     height: 100%;
 }
+
+#barcp1 {
+    background-color: #3eff2477;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+}
+
+#barcp2 {
+    background-color: #3eff2477;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+}
+
 #barpv1text {
     color: #e7dfe7;
-    margin-left: 50px;
+    margin: 0 0 0 50px;
 }
 #barpv2text {
     position: absolute;
     color: #e7dfe7;
-    margin-left: 50px;
+    margin: 0 0 0 60px;
+}
+#barcp1text {
+    color: #e7dfe7;
+    margin: 0 0 0 60px;
+}
+#barcp2text {
+    position: absolute;
+    color: #e7dfe7;
+    margin: 0 0 0 50px;
 }
 
 .barcontainer2 {
-    height: 25px;
+    height: 15px;
     width: 200px;
     overflow: hidden;
     background-color: #0e000b2c;
@@ -289,7 +314,18 @@ form {
     border-radius: 10px;
 }
 
-.barpv2 {
+.barcontainer3 {
+    position: absolute;
+    margin-top: 17px;
+    height: 15px;
+    width: 200px;
+    overflow: hidden;
+    background-color: #0e000b2c;
+    border: #f3f3f3 1px solid;
+    border-radius: 10px;
+}
+
+#barpv2 {
     background-color: #b630a077;
     border-radius: 10px;
     width: 100%;
