--- a/www/game.css
+++ b/www/game.css
@@ -17,6 +17,11 @@ section {
     justify-content: center;
     align-items: center;
 }
+
+h3 {
+    color: white;
+    margin: 0;
+}
 main {
     width: 25%;
     margin-top: 30px;
@@ -97,6 +102,7 @@ form {
 .container-column {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .container-game {
@@ -117,7 +123,9 @@ form {
 .container-barres {
     width: 80%;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 5px;
+    height: 85px;
+
 }
 
 .perso1 {
@@ -523,21 +531,19 @@ form {
 
 #barpv1text {
     color: #e7dfe7;
-    margin: 0 0 0 50px;
+    margin: 0;
 }
 #barpv2text {
-    position: absolute;
     color: #e7dfe7;
-    margin: 0 0 0 60px;
+    margin: 0;
 }
 #barcp1text {
     color: #e7dfe7;
-    margin: 0 0 0 60px;
+    margin: 0;
 }
 #barcp2text {
-    position: absolute;
     color: #e7dfe7;
-    margin: 0 0 0 50px;
+    margin: 0;
 }
 
 .barcontainer2 {
@@ -550,7 +556,6 @@ form {
 }
 
 .barcontainer3 {
-    position: absolute;
     margin-top: 17px;
     height: 15px;
     width: 200px;
