--- a/www/game.css
+++ b/www/game.css
@@ -676,7 +676,7 @@ form {
     height: 100%;
     background-image: url("assets/images/game over.jpg");
     background-repeat: no-repeat;
-    background-size: inherit;
+    background-size: cover;
     z-index: 100;
     display: none;
     transition: ease-in 5s;
