--- a/www/game.css
+++ b/www/game.css
@@ -285,14 +285,14 @@ form {
     
 
 }
-@keyframes magic1-x {
+@keyframes magick1-x {
     from {
         background-position-y: 0;
         background-position-x: 0;
     }
     to {
         background-position-y: 0;
-        background-position-x: -152px;
+        background-position-x: -192px;
     }
 
 }
@@ -326,6 +326,15 @@ form {
     
 
 }
+
+.perso1item2 {
+    height: 70px;
+    width: 55px;
+    background-image: url('assets/sprites/unit_magic_mana_207000105.png');
+    animation : item1-x 3s 1 steps(3);
+    
+
+}
 @keyframes item1-x {
     from {
         background-position-y: 0;
@@ -346,6 +355,16 @@ form {
     
 
 }
+
+.perso2item2 {
+    height: 70px;
+    width: 129px;
+    background-image: url('assets/sprites/unit_magic_mana_207001005.png');
+    animation : item2-x 3s 1 steps(3);
+    
+
+}
+
 @keyframes item2-x {
     from {
         background-position-y: 0;
@@ -612,6 +631,7 @@ form {
     border-radius: 10px;
     width: 100%;
     height: 100%;
+    max-width: 100%;
 }
 
 #barcp1 {
@@ -619,6 +639,7 @@ form {
     border-radius: 10px;
     width: 100%;
     height: 100%;
+    max-width: 100%
 }
 
 #barcp2 {
@@ -626,6 +647,7 @@ form {
     border-radius: 10px;
     width: 100%;
     height: 100%;
+    max-width: 100%
 }
 
 #barpv1text {
@@ -669,6 +691,7 @@ form {
     border-radius: 10px;
     width: 100%;
     height: 100%;
+    max-width: 100%
    
 }
 
