--- a/www/game.css
+++ b/www/game.css
@@ -694,6 +694,16 @@ form {
     max-width: 100%
    
 }
+#intro {
+    width: 100vw;
+    height: 100vh;
+    background-image: url("assets/images/final_fantasy_vii_remake_start_screen_by_rtql8d-d90oimk.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 300;
+    display: flex;
+    transition: ease-in 5s;
+}
 
 #gameover {
     width: 100%;
