--- a/www/game.css
+++ b/www/game.css
@@ -6,6 +6,7 @@
     background-size: cover;
     z-index: 600;
     display: flex;
+    border-radius: 30px;
     top: 0;
     left: 0;
 }
@@ -30,6 +31,7 @@
     z-index: -100;
     justify-content: center;
     border-radius: 30px;
+    background-position-y: bottom;
 }
 
 ul {
