--- a/www/game.css
+++ b/www/game.css
@@ -23,7 +23,7 @@
 }
 
 .background {
-    height: 100wh;
+    height: 100vh;
     width: 100vw;
     background-size: cover;
     background-repeat: no-repeat;
